--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-masonry-css": "^1.0.16",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.3",
